--- a/styles.css
+++ b/styles.css
@@ -96,27 +96,73 @@ body {
 }
 
 .dropdown {
-    position: relative;
-    padding-top: 12px;
+  position: relative;
+  display: inline-block;
+  padding-top: 12px;
 }
 
 .dropdown-menu {
+    display: none;
     position: absolute;
+    z-index: 1;
     color:lightgray;
     left: 0px;
     top: 100%;
     background-color: #2c3840;
-    padding: .75rem;
-    opacity: 0;
-    pointer-events: none;
-    transform: translateY(-10px);
+    /* padding: .75rem; */
     transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+    min-width: 200px;
+  }
+
+  
+  .dropdown-menu a {
+    color: black;
+    /* padding: 12px 16px; */
+    display: block;
+  }
+  
+  .dropdown-menu a:hover {
+    background-color: #ddd;
+}
+  
+  .dropdown:hover .dropdown-menu {
+    display: block;
+    width: 100%;
 }
 
-.dropdown.active > a + .dropdown-menu  {
-    opacity: 1;
-    transform: translateY(0px);
-    pointer-events: auto;
+.dropdown-menu ul {
+    text-decoration: none;
+}
+  
+.dropdown-menu ul > li {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 14px;
+    text-decoration: none;
+    list-style: none;
+    padding-left: 15px;
+    color: white;
+}
+
+.dropdown-menu ul > li:hover {
+    background-color: rgba(255, 255, 255, 0.459);
+    width: 100%;
+    color: white;
+    cursor: pointer;
+}
+
+.dropdown-menu ul .solo-link {
+    color: darkgrey;
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.dropdown-menu ul .solo-link:hover {
+    color: darkgrey;
+    font-size: 10px;
+    font-weight: bold;
+    cursor: auto;
+    background-color: #2c3840;
 }
 
 .second-bar {
@@ -139,6 +185,7 @@ input {
     letter-spacing: .5px;
     background-color: white;
     /* opacity: .7; */
+    border: none;
 
 }
 
@@ -169,10 +216,14 @@ input {
     padding-left: 10px;
 }
 
-.icon {
-    padding-left: 25px;
-    background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat left;
-    background-size: 20px;
+  .magnify {
+    padding-top: 13px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-size: 22px;
+    color: #8a8a8a;
+    font-weight:800 !important;
   }
 
   .top-right {
@@ -192,7 +243,12 @@ input {
     box-shadow: none;
     font-weight: 500;
     font-size: 13px;
+    border-color: lightgrey;
   } 
+
+  .fa-brands .fa-github {
+    color: #0a0a0a;
+  }
 
   /* ***** MAIN ***** */
 
@@ -279,14 +335,16 @@ input {
       padding-left: 15px;
       font-size: 12px;
       font-weight: 450;
+      margin-bottom: 10px;
   }
 
   .container .middle-right .middle-right-top-half p ~ p {
       color: #3a8cc4;
-      padding-top: 18px;
+      padding-top: 9px;
       padding-left: 15px;
       font-size: 14px;
       font-weight: 390;
+      padding-bottom: 9px;
   }
 
   .container .middle-right .middle-right-top-half p ~p:hover {
@@ -308,7 +366,7 @@ input {
 
     .docs-contribute-menu li a {
     color: #939393;
-    -webkit-transition: color 0.35s ease;
+    /* -webkit-transition: color 0.35s ease; */
     transition: color 0.35s ease;
     font-size: 0.85rem;
     font-weight: 300;
@@ -615,7 +673,6 @@ code, .code-inline {
     transition: background-color 0.25s ease-out, color 0.25s ease-out;
     font-family: inherit;
     font-size: 0.9rem;
-    -webkit-appearance: none;
     line-height: 1;
     text-align: center;
     cursor: pointer !important;
