--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ body {
 }
 
 
+
+
 /* ***** HEADER ***** */
 
  header {
@@ -176,7 +178,7 @@ body {
 
 
 input {
-    width: 71.5%;
+    width: 68%;
     height: 100%;
     align-items: center;
     padding: 0px;
@@ -193,7 +195,7 @@ input {
 
 .top-left {
     border-right: 1px solid lightgrey;
-    padding: 10px 85px 15px 10px;
+    padding: 10px 82px 15px 10px;
     align-items: center;
 
 }
@@ -202,12 +204,14 @@ input {
     font-size: 14px;
     color: rgb(173, 173, 173);
     font-weight: 300;
+    padding-left: 5px;
+    padding-bottom: 3px;
 }
 
 .top-left .p2 {
     font-size: 15px;
     font-weight: bold;
-
+    padding-left: 5px;
 }
 
 .top-left .p2 span {
@@ -232,6 +236,7 @@ input {
     align-items: center;
     border-left: 1px solid lightgrey;
     flex: 1;
+    /* padding: 0px 35px; */
   }
 
   .button1 {
@@ -315,7 +320,6 @@ input {
     height: calc(100vh - 100px);
     right: 0;
     overflow-y: scroll;
-    /* opacity: 0.7; */
   }
 
   .container .middle-right-top-half a {
@@ -366,10 +370,10 @@ input {
 
     .docs-contribute-menu li a {
     color: #939393;
-    /* -webkit-transition: color 0.35s ease; */
     transition: color 0.35s ease;
     font-size: 0.85rem;
     font-weight: 300;
+    padding-right: 10px;
 }
 
 .foundation-toc-ad-unit {
@@ -658,11 +662,6 @@ code, .code-inline {
     font-style: italic;
 }
 
-/* .docs-code-live {
-    margin-top: 0px;
-    padding-bottom: 20px;
-} */
-
 .button {
     display: inline-block;
     vertical-align: middle;
@@ -742,7 +741,6 @@ code, .code-inline {
 }
 
 h3 {
-    /* margin-top: -20px; */
     font-size: 30px;
 }
 
@@ -999,3 +997,76 @@ tbody th, tbody td {
 .container .middle-right-top-half .active a{
     color: white !important ;
 }
+
+.pen {
+    font-size: 12px;
+    padding-right: 10px;
+    color: rgb(123, 122, 122);
+}
+
+
+.github2 {
+    font-size: 12px;
+    padding-right: 10px;
+    color: rgb(123, 122, 122);
+}
+
+.message {
+    font-size: 12px;
+    padding-right: 10px;
+    color: rgb(123, 122, 122);
+}
+
+/* DISPLAYS AND MODALS FOR MOBILE */
+
+.mobileNav {
+    display: none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .links-wrap {
+        display: none;
+    }
+
+    .top-left, .top-right{
+        display: none;
+    }
+
+    .second-bar input, .second-bar i {
+        display: none;
+    }
+
+    .mobileNav {
+        display: block;
+    }
+
+    body {
+        width: 320px;
+        overflow-x: hidden;
+    }
+    .middle-left, .middle-right {
+        display: none;
+    }
+    .container {
+        left: -218px;
+        overflow-y: none;
+    }
+
+    .middle {
+        left: auto;
+        min-width: fit-content;
+
+    }
+
+     /* .container .middle {
+    height: 100%;
+    width: calc(100% - 468px); 
+    background-color: white;
+    position: relative;
+    left: 218px;
+    padding-left: 25px;
+    padding-right: 20px;
+  } */
+
+
+  }
